# cs123-hw3-4-ray

./: CMakeLists.txt  README.md  submission-illuminate.md  submission-intersect.md
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/raytracer/: illuminate.cpp  illuminate.h  intersect.cpp  intersect.h  raytracer.cpp  raytracer.h  raytracescene.cpp  raytracescene.h
src/utils/: scenefilereader.cpp  scenefilereader.h  sceneparser.cpp
student_outputs/illuminate/required/: README.md
student_outputs/intersect/required/: README.md
template_inis/illuminate/: point_light_1.ini  point_light_2.ini  reflections_basic.ini  reflections_complex.ini  shadow_special_case.ini  shadow_test.ini  simple_shadow.ini  spot_light_1.ini  spot_light_2.ini  texture_cone.ini  texture_cone2.ini  texture_cube.ini  texture_cube2.ini  texture_cyl.ini  texture_cyl2.ini  texture_sphere.ini  texture_sphere2.ini
template_inis/intersect/: ambient_total.ini  diffuse_total.ini  directional_light_1.ini  directional_light_2.ini  parse_matrix.ini  phong_total.ini  specular_total.ini  unit_cone.ini  unit_cone_cap.ini  unit_cube.ini  unit_cylinder.ini  unit_sphere.ini
